--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <ul>
   <li><a href="Lab02/">Lab02</a></li>
   <li><a href="Lab03/">Lab03</a></li>
-  <li><a href="Lab05/">Lab05</a></li>
+  <li><a href="Lab04/">Lab04</a></li>
+  <li><a href="Lab05/index.html">Lab05</a></li>
+  <li><a href="Lab05/form.html">Lab05(form)</a></li>
 </ul>
