--- a/index.html
+++ b/index.html
@@ -5,4 +5,5 @@
   <li><a href="Lab05/index.html">Lab05</a></li>
   <li><a href="Lab05/form.html">Lab05(form)</a></li>
   <li><a href="Lab06/index.html">Lab06</a></li>
+  <li><a href="Lab07/index.html">Lab07</a></li>
 </ul>
