--- a/index.html
+++ b/index.html
@@ -6,4 +6,6 @@
   <li><a href="Lab05/form.html">Lab05(form)</a></li>
   <li><a href="Lab06/index.html">Lab06</a></li>
   <li><a href="Lab07/index.html">Lab07</a></li>
+  <li><a href="Lab08/index.html">Lab08</a></li>
+  <li><a href="Lab08/form.html">Lab08(form)</a></li>
 </ul>
