--- a/index.html
+++ b/index.html
@@ -8,4 +8,5 @@
   <li><a href="Lab07/index.html">Lab07</a></li>
   <li><a href="Lab08/index.html">Lab08</a></li>
   <li><a href="Lab08/form.html">Lab08(form)</a></li>
+  <li><a href="WAD_ASSIGNMENT_2/landingPage.html">WAD_ASSIGNMENT_2</a></li>
 </ul>
